Add structure to results

--- a/src/slides/methods/evaluating-cis.qmd
+++ b/src/slides/methods/evaluating-cis.qmd
@@ -364,14 +364,161 @@ Contrast with the modular approach of the previous two examples
 
 #### Code Structure
 
+```
+├── main.py
+├── results 
+│   └── ...
+└── sim_infrastructure
+    ├── __init__.py 
+    ├── core.py
+    └── plotting.py
+```
 
-#### Key Simulation Function
+`main.py`:
 
+1. Runs the simulation using function from `sim_infrastructure.core`
+2.  Makes plots using functions from `sim_infrastructure.plotting`
+   
+#### `core` Simulation Module
 
+``` {.python filename="sim_infrastructure/core.py"}
+"""
+Core simulation logic for evaluating confidence intervals for variance.
+
+This module contains the core functions:
+- mle_variance: maximum likelihood estimation of variance.
+- asymptotic_ci_variance: construction of asymptotic confidence intervals.
+- run_simulations: running Monte Carlo simulations for coverage and interval length.
+"""
+
+import numpy as np
+
+from scipy.stats import norm
+
+def mle_variance(data: np.ndarray) -> np.floating:
+    """Estimate the variance of a normal distribution using MLE."""
+    return np.var(data, ddof=0)  # MLE for variance is the sample variance with ddof=0
+
+def asymptotic_ci_variance(data: np.ndarray, alpha: float = 0.05) -> tuple[float, float]:
+    """Construct an asymptotic (Wald-type) confidence interval for the variance."""
+    n = len(data)
+    var_hat = mle_variance(data)
+    se = np.sqrt(2 * var_hat**2 / n)
+    z_crit = norm.ppf(1 - alpha / 2)
+    lower = max(0, var_hat - z_crit * se)  # Ensure lower bound is non-negative
+    upper = var_hat + z_crit * se
+    return lower, upper
+
+def run_simulations(
+    true_vars: np.ndarray, 
+    n_simulations: int = 1000,
+    n_obs_list: list[int] = [20, 100],
+    alpha: float = 0.05,
+    seed: int = 1,
+) -> dict[int, dict[float, dict]]:
+    """
+    Run Monte Carlo simulations for each true variance and sample size.
+
+    Args:
+        true_vars (np.ndarray): true variance values to simulate.
+        n_simulations (int): number of Monte Carlo simulations per true variance.
+        n_obs_list (list[int]): list of sample sizes to simulate.
+        alpha (float): significance level for confidence intervals.
+        seed (int): Random seed for reproducibility.
+
+    Returns:
+        Nested dictionary: {n_obs: {true_var: {'coverage': ..., 'errors': ..., 'lengths': ...}}}
+    """
+    rng = np.random.default_rng(seed)
+    results = {n_obs: {} for n_obs in n_obs_list}
+
+    # Loop over sample sizes
+    for n_obs in n_obs_list:
+        # Loop over true variables
+        for true_var in true_vars:
+            errors = []
+            lengths = []
+            coverage = []
+            for _ in range(n_simulations):
+                # Draw data and run estimation
+                data = rng.normal(0, np.sqrt(true_var), n_obs)
+                var_hat = mle_variance(data)
+
+                # Record estimation error in variance
+                errors.append(var_hat - true_var)
+
+                # Construct CI and check if variance belongs to it
+                ci_lower, ci_upper = asymptotic_ci_variance(data, alpha)
+                lengths.append((ci_upper - ci_lower) / true_var) 
+                coverage.append(ci_lower <= true_var <= ci_upper)
+ 
+            results[n_obs][true_var] = {
+                'coverage': np.mean(coverage),
+                'errors': np.array(errors),
+                'lengths': np.array(lengths)
+            }
+
+    return results
+```
 
 #### `main.py`
 
+```{.python filename="main.py"}
+"""
+Entry point for running simulations and generating plots.
+
+Simulation 3: evaluating confidence intervals for variance of the normal
+distribution based on the maximum likelihood estimator. Simultions consider
+coverage and (scaled) length properties as true variance decreases to zero.
+
+This script:
+- Sets up simulation parameters.
+- Runs the core simulation.
+- Generates and saves all plots.
+"""
+
+from pathlib import Path
+
+import numpy as np
+
+from sim_infrastructure.core import run_simulations
+from sim_infrastructure.plotting import plot_coverage_and_lengths, plot_error_kdes
+
+# Simulation parameters: note upper case for constants
+TRUE_VARS = np.logspace(-3, 1, 50)
+N_OBS_LIST = [20, 100]
+N_SIMS = 50000
+CI_ALPHA = 0.05
+SEED = 1
+OUTPUT_DIR = Path() / "results"
+
+
+def main():
+    # Run simulations
+    results = run_simulations(TRUE_VARS, N_SIMS, N_OBS_LIST, CI_ALPHA, SEED)
+
+    # Generate plots
+    plot_coverage_and_lengths(results, OUTPUT_DIR)
+    plot_error_kdes(results, OUTPUT_DIR)
+
+
+if __name__ == "__main__":
+    main()
+```
+
+#### Core Organization: Discussion
+
+- Tightly couple code
+  - Sacrifice extensibility
+  - But much easier to write, much less infrastructure
+- Fine for our small targeted simulation
+- Inside simulation: store CI coverage and length; estimation error of maximum likelihood estimator
+
 ## Simulation Results {background="#00100F"}
+
+### Core Results {background="#43464B"}
+
+
 
 #### Results Handling
 
@@ -381,6 +528,29 @@ Then don't save the results
 
 and just pass them directly to plottiing functions
 
+#### Coverage Plot
+
+
+#### Length Plot
+
+#### Simulation Results
+
+### Why Coverage Issues for Smaller Samples? {background="#43464B"}
+
+#### Potential Explanations of Bad Coverage for $N=20$
+
+
+::: {.left-color}
+
+:::
+
+#### Example Distribution Plot for $N=20$
+
+
+#### Example Distribution Plot for $N=100$
+
+
+#### Discussions of Distributional Approximation
 
 ## Recap and Conclusions {background="#00100F"}
  
