--- a/docs/slides/methods/evaluating-tests.qmd
+++ b/docs/slides/methods/evaluating-tests.qmd
@@ -410,7 +410,7 @@ $$
 
 Will base the test on the <span class="highlight">Wald statistic</span>:
 $$ \small
-W = N\left(  \bR\hat{\bbeta}-\bq   \right)'\left(\bR\widehat{\avar}(\bbeta)\bR'\right)^{-1}\left(  \bR\hat{\bbeta}-\bq   \right)
+W = N\left(  \bR\hat{\btheta}-\bc   \right)'\left(\bR\widehat{\avar}(\btheta)\bR'\right)^{-1}\left(  \bR\hat{\btheta}-\bc   \right)
 $$ 
 
 #### Example II: Definition of Wald Test
@@ -480,7 +480,7 @@ plt.show()
 
 #### Plan For This Part
 
-Now turn to answering our motivating question: joint vs. mulitple tests for joint nulls
+Now turn to answering our motivating question: joint vs. multiple tests for joint nulls
 
 <br>
 
